// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fulfilled types 1`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "ADD_ACCOUNT_FULFILLED",
}
`;

exports[`fulfilled types 2`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "DELETE_ACCOUNT_FULFILLED",
}
`;

exports[`fulfilled types 3`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "DELETE_ACCOUNTS_FULFILLED",
}
`;

exports[`fulfilled types 4`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {
        "images": Array [
          "success",
        ],
      },
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNT_FULFILLED",
}
`;

exports[`fulfilled types 5`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNTS_FULFILLED",
}
`;

exports[`fulfilled types 6`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "UPDATE_ACCOUNTS_FULFILLED",
}
`;

exports[`fulfilled types 7`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "UPDATE_ACCOUNT_FULFILLED",
}
`;

exports[`fulfilled types 8`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "UPDATE_ACCOUNT_FIELD_FULFILLED",
}
`;

exports[`fulfilled types 9`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": true,
      "images": Array [
        "success",
      ],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_FULFILLED",
}
`;

exports[`fulfilled types 10`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": true,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_INSTANCES_FULFILLED",
}
`;

exports[`fulfilled types 11`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNT_INSTANCES_FULFILLED",
}
`;

exports[`fulfilled types 12`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "ADD_ACCOUNT_SHOW_FULFILLED",
}
`;

exports[`fulfilled types 13`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "UPDATE_ACCOUNT_HIDE_FULFILLED",
}
`;

exports[`fulfilled types 14`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "EDIT_ACCOUNT_SHOW_FULFILLED",
}
`;

exports[`fulfilled types 15`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "EDIT_ACCOUNT_HIDE_FULFILLED",
}
`;

exports[`pending types 1`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "ADD_ACCOUNT_PENDING",
}
`;

exports[`pending types 2`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "DELETE_ACCOUNT_PENDING",
}
`;

exports[`pending types 3`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "DELETE_ACCOUNTS_PENDING",
}
`;

exports[`pending types 4`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNT_PENDING",
}
`;

exports[`pending types 5`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNTS_PENDING",
}
`;

exports[`pending types 6`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "UPDATE_ACCOUNTS_PENDING",
}
`;

exports[`pending types 7`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "UPDATE_ACCOUNT_PENDING",
}
`;

exports[`pending types 8`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "UPDATE_ACCOUNT_FIELD_PENDING",
}
`;

exports[`pending types 9`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": true,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_PENDING",
}
`;

exports[`pending types 10`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": true,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_INSTANCES_PENDING",
}
`;

exports[`pending types 11`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNT_INSTANCES_PENDING",
}
`;

exports[`pending types 12`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "ADD_ACCOUNT_SHOW_PENDING",
}
`;

exports[`pending types 13`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "UPDATE_ACCOUNT_HIDE_PENDING",
}
`;

exports[`pending types 14`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "EDIT_ACCOUNT_SHOW_PENDING",
}
`;

exports[`pending types 15`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "EDIT_ACCOUNT_HIDE_PENDING",
}
`;

exports[`rejected types 1`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "ADD_ACCOUNT_REJECTED",
}
`;

exports[`rejected types 2`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "DELETE_ACCOUNT_REJECTED",
}
`;

exports[`rejected types 3`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "DELETE_ACCOUNTS_REJECTED",
}
`;

exports[`rejected types 4`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNT_REJECTED",
}
`;

exports[`rejected types 5`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNTS_REJECTED",
}
`;

exports[`rejected types 6`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "UPDATE_ACCOUNTS_REJECTED",
}
`;

exports[`rejected types 7`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "UPDATE_ACCOUNT_REJECTED",
}
`;

exports[`rejected types 8`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "UPDATE_ACCOUNT_FIELD_REJECTED",
}
`;

exports[`rejected types 9`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_REJECTED",
}
`;

exports[`rejected types 10`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_INSTANCES_REJECTED",
}
`;

exports[`rejected types 11`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNT_INSTANCES_REJECTED",
}
`;

exports[`rejected types 12`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "ADD_ACCOUNT_SHOW_REJECTED",
}
`;

exports[`rejected types 13`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "UPDATE_ACCOUNT_HIDE_REJECTED",
}
`;

exports[`rejected types 14`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "EDIT_ACCOUNT_SHOW_REJECTED",
}
`;

exports[`rejected types 15`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "EDIT_ACCOUNT_HIDE_REJECTED",
}
`;
